--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-FIREBASE_API_KEY="example",
-FIREBASE_AUTH_DOMAIN="example",
-FIREBASE_PROJECT_ID="example",
-FIREBASE_STORAGE_BUCKET="example",
-FIREBASE_MESSAGING_SENDER_ID="example",
+# Firebase Configuration
+FIREBASE_API_KEY="example"
+FIREBASE_AUTH_DOMAIN="example"
+FIREBASE_PROJECT_ID="example"
+FIREBASE_STORAGE_BUCKET="example"
+FIREBASE_MESSAGING_SENDER_ID="example"
 FIREBASE_APP_ID="example"
+
+FIREBASE_PRIVATE_KEY_ID="example",
+FIREBASE_PRIVATE_KEY="example",
+FIREBASE_CLIENT_EMAIL="example",
+FIREBASE_CLIENT_ID="example",
+
+BACKEND_URL="example"
